upwork-devs/yarden-shoham/file-drop.co.uk/chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-drop-traffic-generator-backend
spec:
  selector:
    app: file-drop-traffic-generator-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
