upwork-devs/yarden-shoham/file-drop.co.uk/chart/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-drop-traffic-generator-frontend
spec:
  selector:
    app: file-drop-traffic-generator-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
